; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_ldt_gdt.c_safe_modify_ldt.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_ldt_gdt.c_safe_modify_ldt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.user_desc = type { i32 }

@SYS_modify_ldt = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.user_desc*, i64)* @safe_modify_ldt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @safe_modify_ldt(i32 %0, %struct.user_desc* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.user_desc*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.user_desc* %1, %struct.user_desc** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @SYS_modify_ldt, align 4
  %9 = load %struct.user_desc*, %struct.user_desc** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @syscall(i32 %8, i32 17, %struct.user_desc* %9, i64 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, -1
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* @errno, align 4
  br label %17

17:                                               ; preds = %14, %3
  %18 = load i32, i32* %7, align 4
  ret i32 %18
}

declare dso_local i32 @syscall(i32, i32, %struct.user_desc*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
